tests/baselines/reference/superWithTypeArgument.errors.txt
==== tests/cases/compiler/superWithTypeArgument.ts (3 errors) ====
    class C {
        
    }
    
    class D<T> extends C {
        constructor() {
        ~~~~~~~~~~~
!!! error TS2105: Constructors for derived classes must contain a 'super' call.
            super<T>();
                 ~
!!! error TS1005: '.' expected.
            ~~~~~
!!! error TS2158: Untyped function calls may not accept type arguments.
        }
    }